<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RemoteCameraController</string>
    <string name="image_view_01_description">Camera 01 Feed</string>
    <string name="start_button_text">Start</string>
    <string name="stop_button_text">Stop</string>
    <string name="save_button_text">Save</string>
    <string name="alarm_button_text">Alarm</string>
    <string name="url_hint">Enter the IP of the server</string>
    <string name="view_images_option_title">View Saved Images</string>
	<string name="saved_image_view_description">Saved Image</string>
	<string name="next_button_text">Next</string>
	<string name="previous_button_text">Previous</string>
	
</resources>
