<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
     >
     
	<WebView
	    android:id="@+id/camera_view_01"
	    android:layout_width="match_parent"
	    android:layout_height="300dp"
	    />
	
	<EditText
	    android:id="@+id/server_ip_edit_text"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:hint="@string/url_hint"
	    android:inputType="textUri"
	    />
	
	<Button
	    android:id="@+id/start_button"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/start_button_text"
	    />
	
	<Button
	    android:id="@+id/stop_button"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/stop_button_text"
	    />
	
	<Button
	    android:id="@+id/save_button"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/save_button_text"
	    />
	
	<Button
	    android:id="@+id/alarm_button"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/alarm_button_text"
	    />
	
</LinearLayout>
