<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <ImageView
        android:id="@+id/saved_image_view"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:contentDescription="@string/saved_image_view_description"
        />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        >
        
        <Button
	        android:id="@+id/previous_image_button"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/previous_button_text"
	        />
        
	    <Button
	        android:id="@+id/next_image_button"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/next_button_text"
	        />
	    
    </LinearLayout>
</LinearLayout>
